feat: add argocd and migration to k8s